--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.6.8",
     "crypto-js": "^4.2.0",
     "ethers": "^6.9.0",
+    "mongoose": "^8.3.2",
     "murmurhash-js": "^1.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
